<resources translatable="false">
    <string name="app_name">Animals</string>
    <string name="homeworks"> Homeworks </string>
    <string name="lessons"> Lessons </string>

    <string name="simple_view">Simple View</string>
    <string name="calculator">Calculator</string>
    <string name="animals">Animals</string>
    <string name="chronometer">Chronometer</string>
    <string name="color">MyColor</string>
    <string name="full_calculator">Full Calculator</string>
    <string name="gestures">Gestures</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="fragments">Fragments</string>
    <string name="fragment_arg">Fragment Argument</string>
    <string name="fragments_navdrawer">Fragments On Nav Drawer</string>
    <string name="recycler_edittext">Recycler EditText</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="receiver">Receiver</string>
    <string name="service">Simple Service</string>

    <string name="lesson29">Lesson29 RelativeLayout</string>
    <string name="lesson31">Lesson31 ConstraintLayout</string>
    <string name="lesson33">Lesson32_33 Activity Lifecycle</string>
    <string name="lesson34">Lesson34 Activity Stack</string>
    <string name="lesson41_42">Lesson 41_42 Recycler View</string>

    <string name="text1">Урок 23</string>
    <string name="text2">Домашнее задание 23</string>
    <string name="button">Кнопка</string>
    <string name="text_first">Измените цвет и размер текста в TextView а с button измените background(фон),размер и запустите приложения.</string>

    <string name="first">Snake</string>
    <string name="second">Shark</string>
    <string name="third">Snail</string>
    <string name="text_animals"> </string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="result"> </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="hello_text">Hello World!</string>
    <string name="title"> Cruella May 2021</string>
    <string name="director_label">Director:</string>
    <string name="director">Craig Gillespie</string>
    <string name="description">Estella is a young and clever grifter who\'s determined to make a name for herself in the fashion world. She soon meets a pair of thieves who appreciate her appetite for mischief, and together they build a life for themselves on the streets of London. However, when Estella befriends fashion legend Baroness von Hellman, she embraces her wicked side to become the raucous and revenge-bent Cruella.</string>
    <string name="actors_label">Actors</string>
    <string name="actor1">Emma Stone</string>
    <string name="actor2">Emma Thompson</string>
    <string name="actor3">Emily Beecham</string>
    <string name="actor4">Kirby Howell</string>
    <string name="like">Like</string>
    <string name="watch">Watch</string>
    <string name="share">Share</string>
    <string name="enter_data">Enter Data</string>
    <string name="submit_data">Button</string>
    <string name="activity_text_output"/>

    <string name="a">Activity A</string>
    <string name="btn_a">Start B</string>
    <string name="b">Activity B</string>
    <string name="btn_b">Start C</string>
    <string name="c">Activity C</string>
    <string name="btn_c">Start D</string>
    <string name="d">Activity D</string>
    <string name="btn_d">Start A</string>
    <string name="btn_start_d">Start D</string>
    <string name="btn_start_c">Start C</string>
    <string name="text_launch_top"/>

    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>

    <string name="first_item">First Item</string>
    <string name="second_item">Second Item</string>
    <string name="third_item">Third Item</string>
    <string name="fourth_item">Fourth Item</string>
    <string name="fifth_item">Fifth Item</string>
    <string name="sixth_item">Sixth Item</string>
    <string name="seventh_item">Seventh Item</string>
    <string name="eighth_item">Eighth Item</string>
    <string name="ninth_item">Ninth Item</string>
    <string name="tenth_item">Tenth Item</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="notification">Notes</string>
    <string name="noteTitle">Homework 42</string>
    <string name="noteText">Homework 42 Notification text</string>
    <string name="view_holder">View Holder</string>
    <string name="details">More...</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="send_receiver">Send Broadcast</string>
</resources>