<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:baselineAligned="true"
    android:orientation="vertical"
    tools:context=".HomeworkActivities">

    <TextView
        android:id="@+id/textMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeworks"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_simpleview"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/textMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_animals"
        android:text="@string/simple_view" />
    <Button
        android:id="@+id/btn_animals"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/textMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_simpleview"
        android:text="@string/animals" />
    <Button
        android:id="@+id/btn_calc"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_simpleview"
        app:layout_constraintEnd_toStartOf="@id/btn_animals"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/calculator" />
    <Button
        android:id="@+id/btn_chrono"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_animals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_simpleview"
        android:text="@string/chronometer" />
    <Button
        android:id="@+id/btn_color"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_calc"
        app:layout_constraintEnd_toStartOf="@id/btn_animals"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/color" />
    <Button
        android:id="@+id/btn_calculator"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_chrono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_simpleview"
        android:text="@string/full_calculator" />
    <Button
        android:id="@+id/btn_gestures"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_color"
        app:layout_constraintEnd_toStartOf="@id/btn_animals"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gestures" />
    <Button
        android:id="@+id/btn_movie"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_simpleview"
        android:text="@string/movie_poster" />

    <Button
        android:id="@+id/btn_fragments"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_gestures"
        app:layout_constraintEnd_toStartOf="@id/btn_animals"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/fragments"/>

    <Button
        android:id="@+id/btn_fragment_arg"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_simpleview"
        android:text="@string/fragment_arg" />

    <Button
        android:id="@+id/btn_fragments_navdrawer"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_fragments"
        app:layout_constraintEnd_toStartOf="@id/btn_animals"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/fragments_navdrawer" />

    <Button
        android:id="@+id/btn_recycler_edit"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_fragment_arg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_simpleview"
        android:text="@string/recycler_edittext"/>

    <Button
        android:id="@+id/btn_preferences"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_fragments_navdrawer"
        app:layout_constraintEnd_toStartOf="@id/btn_animals"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/shared_preferences"/>

    <Button
        android:id="@+id/btn_receiver"
        android:layout_width="170dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/btn_recycler_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_simpleview"
        android:text="@string/receiver"/>
</androidx.constraintlayout.widget.ConstraintLayout>