<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:baselineAligned="true"
    android:orientation="vertical"
    tools:context=".LessonActivities">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/lessons"
            android:textSize="35sp" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson29" />
    <Button
        android:id="@+id/btn_31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson31" />
    <Button
        android:id="@+id/btn_33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson33" />
    <Button
        android:id="@+id/btn_34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson34" />
</LinearLayout>