<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:baselineAligned="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/text_main"
            android:textSize="35sp" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_animals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animals" />
    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator" />
    <Button
        android:id="@+id/btn_chrono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/chronometer" />
    <Button
        android:id="@+id/btn_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/color" />
    <Button
        android:id="@+id/btn_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/full_calculator" />
</LinearLayout>