<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/cruella"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/section_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="director_label, director, poster, title"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_goneMarginEnd="16dp"/>
        <ImageView
            android:id="@+id/poster"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/cruella2"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_constraintEnd_toEndOf="@id/content_end"/>

        <TextView
            android:id="@+id/director_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/director_label"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/director_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_section_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title, poster, director, director_label"/>

        <TextView
            android:id="@+id/short_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintTop_toBottomOf="@id/title_section_bottom_barrier"/>

        <TextView
            android:id="@+id/actors_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actors_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintTop_toBottomOf="@id/short_description"/>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="actor_1, actor_2, actor_3, actor_4"
            app:flow_firstVerticalStyle="packed"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="8dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalGap="8dp"
            app:flow_wrapMode="chain"
            app:layout_constraintTop_toBottomOf="@id/actors_label"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"/>

        <TextView
            android:id="@+id/actor_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor1"
            android:background="@drawable/btn_grey"/>
        <TextView
            android:id="@+id/actor_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor2"
            android:background="@drawable/btn_grey"/>
        <TextView
            android:id="@+id/actor_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor3"
            android:background="@drawable/btn_grey"/>
        <TextView
            android:id="@+id/actor_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor4"
            android:background="@drawable/btn_grey"/>

        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/like"
            app:layout_goneMarginEnd="0dp"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintEnd_toStartOf="@+id/watch"
            app:layout_constraintTop_toBottomOf="@+id/actors"
            app:layout_constraintHorizontal_chainStyle="packed"/>
        <Button
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/watch"
            app:layout_goneMarginEnd="0dp"
            app:layout_constraintStart_toEndOf="@+id/like"
            app:layout_constraintEnd_toStartOf="@+id/share"
            app:layout_constraintTop_toBottomOf="@+id/actors"
            app:layout_constraintHorizontal_chainStyle="packed"/>
        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/share"
            app:layout_goneMarginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/watch"
            app:layout_constraintTop_toBottomOf="@+id/actors"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintHorizontal_chainStyle="packed"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>