<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="130dp"
    android:clickable="true"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ChronometerActivity">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_margin="60dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/btn_green"
        android:baselineAligned="false"
        android:clickable="true"
        android:text="@string/start"
        android:textColor="@color/white"
        tools:ignore="ObsoleteLayoutParam" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/btn_red"
        android:text="@string/stop"
        android:textColor="@color/white"
        tools:ignore="ObsoleteLayoutParam" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/btn_purple"
        android:text="@string/reset"
        android:textColor="@color/white"
        tools:ignore="ObsoleteLayoutParam" />
</LinearLayout>