<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:orientation="vertical"
    tools:context=".CalcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/box1"
        android:layout_marginEnd="15pt"
        android:layout_marginStart="15pt"
        android:layout_marginTop="5pt">

        <EditText
            android:id="@+id/number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10pt"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:singleLine="true" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10pt"
            android:id="@+id/number2"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/box2"
        android:layout_marginTop="5pt"
        android:layout_marginLeft="3pt"
        android:layout_marginRight="3pt">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sum"
            android:textSize="10pt"
            android:background="@drawable/btn_bg"
            android:layout_marginHorizontal="7dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub"
            android:textSize="10pt"
            android:background="@drawable/btn_bg"
            android:layout_marginHorizontal="7dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multi"
            android:textSize="10pt"
            android:background="@drawable/btn_bg"
            android:layout_marginHorizontal="7dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/div"
            android:textSize="10pt"
            android:background="@drawable/btn_bg"
            android:layout_marginHorizontal="7dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7pt"
        android:layout_marginRight="7pt"
        android:textSize="16pt"
        android:layout_marginTop="5pt"
        android:gravity="center_horizontal"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:text="">
    </TextView>
</LinearLayout>